--- a/1-international_trade/Gemfile
+++ b/1-international_trade/Gemfile
@@ -2,3 +2,6 @@ source :rubygems
 gem "nokogiri", "=1.5.0.beta.4"
 gem "fastercsv"
 gem "rspec"
+gem "autotest"
+gem "autotest-growl"
+gem "spork", "=0.9.0.rc4"
