Switch to MiniTest/Spec and add Rakefile
I'm getting a little more confident in how I set this stuff up, so let's
switch to MiniTest::Spec instead of RSpec.

Also, let's use Guard for watching

And add a Rakefile for running specs

--- a/1-international_trade/Gemfile
+++ b/1-international_trade/Gemfile
@@ -1,8 +1,11 @@
 source :rubygems
 gem "nokogiri", ">=1.5.0"
 gem "fastercsv"
-gem "rspec"
-gem "autotest"
-gem "autotest-growl"
-gem "spork", "=0.9.0.rc4"
-gem "watchr" # might replace autotest
+gem "guard"
+gem "guard-minitest"
+
+#gem "rspec"
+#gem "autotest"
+#gem "autotest-growl"
+#gem "spork", "=0.9.0.rc4"
+#gem "watchr" # might replace autotest
