add Neo4J to deps and try to use it for traversal

--- a/1-international_trade/Gemfile
+++ b/1-international_trade/Gemfile
@@ -3,6 +3,9 @@ gem "nokogiri", ">=1.5.0"
 gem "fastercsv"
 gem "guard"
 gem "guard-minitest"
+gem "pry"
+gem "neo4j"
+
 
 #gem "rspec"
 #gem "autotest"
