Lots of changes, nothing spectacular
Switching to using Neo4j for mapping the currencies around,
need to finish this damned thing.

--- a/1-international_trade/Gemfile
+++ b/1-international_trade/Gemfile
@@ -5,6 +5,10 @@ gem "guard"
 gem "guard-minitest"
 gem "pry"
 gem "neo4j"
+gem "minitest"
+gem "rb-notifu" # windows file system watching for Guard
+gem "rb-fchange"
+
 
 
 #gem "rspec"
