add finder using traversal

--- a/1-international_trade/Gemfile
+++ b/1-international_trade/Gemfile
@@ -8,6 +8,7 @@ gem "neo4j"
 gem "minitest"
 gem "rb-notifu" # windows file system watching for Guard
 gem "rb-fchange"
+gem "rake"
 
 #gem "rspec"
 #gem "autotest"
