--- a/2-cheap-tourist-fast-tourist/Gemfile
+++ b/2-cheap-tourist-fast-tourist/Gemfile
@@ -1,10 +1,10 @@
 source "https://rubygems.org"
 
-gem "neo4j", ">= 2.0.0.alpha.6"
-gem "minitest"
+gem "neo4j", "~> 2.0.0.alpha.7"
 
-group :development do
-    gem "pry"
-end
+gem "orm_adapter", "~> 0.0.7"
+gem "pry"
+gem 'rake', "~> 0.9.2.2"
+gem "minitest", "~> 2.12.1"
 
 
