--- a/2-cheap-tourist-fast-tourist/Gemfile
+++ b/2-cheap-tourist-fast-tourist/Gemfile
@@ -2,6 +2,7 @@ source "https://rubygems.org"
 
 gem "neo4j", "~> 2.0.0.alpha.9"
 
+gem "jruby-openssl"
 gem "orm_adapter", "~> 0.0.7"
 gem "pry"
 gem "rake", "~> 0.9.2.2"
