--- a/2-cheap-tourist-fast-tourist/Rakefile
+++ b/2-cheap-tourist-fast-tourist/Rakefile
@@ -8,6 +8,6 @@ require 'spec/spec_helper'
 
 require 'rake/testtask'
 Rake::TestTask.new do |t|
-    t.pattern = "spec/*_spec.rb"
+    t.pattern = "spec/**/*_spec.rb"
 end
 
