because I want to know code to test ratios

--- a/2-cheap-tourist-fast-tourist/Rakefile
+++ b/2-cheap-tourist-fast-tourist/Rakefile
@@ -11,3 +11,7 @@ Rake::TestTask.new do |t|
     t.pattern = "spec/**/*_spec.rb"
 end
 
+task :coderatio do
+  puts Dir["spec/**/*_spec.rb"].size.to_f / Dir["lib/**/*.rb"].size.to_f
+end
+
