--- a/2-cheap-tourist-fast-tourist/Gemfile
+++ b/2-cheap-tourist-fast-tourist/Gemfile
@@ -9,5 +9,6 @@ gem "rake", "~> 0.9.2.2"
 gem "minitest", "~> 2.12.1"
 gem "guard"
 gem "guard-minitest"
-gem 'ruby_gntp'
-gem 'guard-ctags-bundler'
+gem "ruby_gntp"
+gem "guard-ctags-bundler"
+gem "minitest-context"
